# London_houses

./: .geminiignore  .gitignore  README.md  architeture.drawio  architeture.txt  architeture_data.drawio  main.py  makefile  pyproject.toml  requirements.txt  text.md
.gemini/: context.yaml
config/: agent_config.yaml  config.yaml
docs/architecture/: architecture_agent.drawio
notebooks/: eda_analysis.ipynb  regression_models.ipynb
src/app/: app.py
src/data/: data_processor.py
src/ml/training/: trainer.py
