[project]
name = "london-houses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "langchain>=0.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.0",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "streamlit-chat>=0.1.1",
    "streamlit-option-menu>=0.4.0",
    "uvicorn[standard]>=0.44.0",
    "xgboost>=3.2.0",
]
